--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="”manifest”" href="manifest.json" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="”manifest”" href="./manifest.json" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/icons/icon_transparent.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>app.kartkazareny.pl</title>
     <link
@@ -13,23 +17,23 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
     <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker.register("serviceWorker.js").then(
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function () {
+          navigator.serviceWorker.register('serviceWorker.js').then(
             function (registration) {
               console.log(
-                "ServiceWorker registration successful with scope:",
+                'ServiceWorker registration successful with scope:',
                 registration.scope
               );
             },
             function (err) {
-              console.log("ServiceWorker registration failed: ", err);
+              console.log('ServiceWorker registration failed: ', err);
             }
           );
         });
       }
     </script>
-    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
