--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="”manifest”" href="./manifest.json" />
+    <link rel="”manifest”" href="manifest.json" />
     <link
       rel="icon"
       type="image/svg+xml"
