--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="”manifest”" href="manifest.json" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/icons/icon_transparent.svg"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>app.kartkazareny.pl</title>
+    <meta name="description" content="Application to manage Arena warehouse" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="alternate icon"
+      href="/favicon.ico"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="/favicon.svg" color="#e5edfb" />
+    <meta name="theme-color" content="#e5edfb" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -19,17 +24,17 @@
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function () {
-          navigator.serviceWorker.register('serviceWorker.js').then(
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker.register("serviceWorker.js").then(
             function (registration) {
               console.log(
-                'ServiceWorker registration successful with scope:',
+                "ServiceWorker registration successful with scope:",
                 registration.scope
               );
             },
             function (err) {
-              console.log('ServiceWorker registration failed: ', err);
+              console.log("ServiceWorker registration failed: ", err);
             }
           );
         });
